fixed broken link and troubleshooting layout-shift

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@ a:hover {
 
 h1 {
     font-family: 'Rhodium Libre', serif;
+    font-display: swap;
 }
 
 p, small {
